Widget cutoff issue

--- a/appcubator/static/css/app/editor/widget-editor.less
+++ b/appcubator/static/css/app/editor/widget-editor.less
@@ -18,12 +18,14 @@
     top: 0;
     left: 100%;
     margin-left: 10px;
+    margin-top: 0;
   }
 
   &.left {
     top: 0;
     left: 0;
     margin-left: -270px;
+    margin-top: 0;
   }
 
   .font-picker {
@@ -48,7 +50,7 @@
     width: 12px;
     position: absolute;
     left: 0;
-    top: 0;
+    top: -15px;
     margin-left: -12px;
     background-image: url(/static/img/left-blue-arrow.png);
     background-repeat: no-repeat;
@@ -61,7 +63,7 @@
     width: 12px;
     position: absolute;
     left: 100%;
-    top: 0;
+    top: -15px;
     margin-right: -12px;
     background-image: url(/static/img/right-blue-arrow.png);
     background-repeat: no-repeat;
